--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
         <!-- computer form -->
         <div style="text-align: right">
-            <img src="kertas.PNG" alt="kertas" class="comp">
-            <img src="batu.PNG" alt="batu" class="comp"> 
-            <img src="gunting.PNG" alt="gunting" class="comp"> 
+            <img src="kertas.PNG" alt="kertas" class="comp" id="comp-kertas">
+            <img src="batu.PNG" alt="batu" class="comp" id="comp-batu"> 
+            <img src="gunting.PNG" alt="gunting" class="comp" id="comp-gunting"> 
     </div>
     <h1 id = "test" > Result </h1>
     <script src="script.js"></script>
